// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Select > (Snapshot) renders basic with description 1`] = `
<div
  class="relative flex w-full flex-col gap-2"
>
  <label
    class="text-foreground text-sm font-semibold"
    for="select-quality"
    id="select-quality-label"
  >
    Quality
  </label>
  <button
    aria-expanded="false"
    aria-haspopup="listbox"
    class="border-border bg-primary text-foreground relative flex w-full items-center justify-between rounded-md border-(length:--border-width) text-left transition-colors focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 px-3 py-2 text-sm"
    data-headlessui-state=""
    id="select-quality"
    type="button"
  >
    <span
      class="block truncate"
    >
      Medium
    </span>
    <span
      class="flex items-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down text-foreground transition-transform"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </span>
  </button>
  <p
    class="text-foreground-secondary text-sm select-none"
    id="select-quality-description"
  >
    Choose your preferred playback quality.
  </p>
</div>
`;

exports[`Select > (Snapshot) renders error without description 1`] = `
<div
  class="relative flex w-full flex-col gap-2"
>
  <label
    class="text-foreground text-sm font-semibold"
    for="select-quality-error"
    id="select-quality-error-label"
  >
    Quality
  </label>
  <button
    aria-errormessage="select-quality-error-error"
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-invalid="true"
    class="bg-primary text-foreground relative flex w-full items-center justify-between rounded-md border-(length:--border-width) text-left transition-colors focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 focus-visible:outline-none disabled:cursor-not-allowed disabled:opacity-50 px-3 py-2 text-sm border-accent-red"
    data-headlessui-state=""
    id="select-quality-error"
    type="button"
  >
    <span
      class="block truncate"
    >
      Low
    </span>
    <span
      class="flex items-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-chevron-down text-foreground transition-transform"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m6 9 6 6 6-6"
        />
      </svg>
    </span>
  </button>
  <p
    class="text-accent-red text-xs select-none"
    id="select-quality-error-error"
  >
    Please make a selection
  </p>
</div>
`;
